syntax = "proto3";

package user_service;

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetUserByEmail(GetUserByUserNameRequest) returns (GetUserResponse) {}
  rpc GetUserById(GetUserByIdRequest) returns (GetUserResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
}

message CreateUserResponse {
  string id = 1;
}
message GetUserByIdRequest {
  string id = 1;
}

message GetUserByUserNameRequest {
  string username = 1;
}

message GetUserResponse {
  string id = 1;
  string username = 2;
  string password = 3;
  string uuid = 4;
}

message UpdateUserRequest {
  string id = 1;
  string username = 2;
  string password = 3;
}

message UpdateUserResponse {
  bool success = 1;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}
